desenv_tests/test-assets/desenv/failure/desenv_attribute_used_twice_1.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(default)]
    #[desenv(default)]
    field: String
}

fn main(){}